Fix for infopanel overlap on footer

--- a/public/css/dbkm.css
+++ b/public/css/dbkm.css
@@ -599,3 +599,33 @@ input[type="radio"], input[type="checkbox"] {
 .modal-popup .input-group-addon, .modal-popup .input-group-btn {
     width: 1% !important;
 }
+
+.unread {
+    color: #AA0009 !important;
+}
+
+.table, .nav {
+    font-size: 18px;
+}
+
+#vectorclickpanel {
+    z-index: 1002;
+}
+#vectorclickpanel img {
+    height: 45px;
+    width: auto !important;
+}
+#vectorclickpanel .gevicode, #vectorclickpanel .unnummer {
+    font-size: 14px;
+}
+#vectorclickpanel .panel-body {
+    padding: 0 20px;
+}
+#vectorclickpanel .panel-footer {
+    padding: 0;
+}
+#supportpanel {
+    margin-bottom: 0;
+    max-height: 40%;
+    overflow: auto;
+}
